# Leave_System_Backend

./: README.md  main.py  pyproject.toml  requirements.txt  verify_config.py
leaves/: apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
leaves/management/commands/: setup_admin.py
leaves/migrations/: 0002_employee_is_deleted.py  0003_alter_employee_role_alter_leave_status.py  0004_leavetype_allowed_month_end_and_more.py  0005_replace_allowed_month_with_allowed_months.py
leaves/templates/emails/: password_reset_email.html
leavesystem/: asgi.py  settings.py  urls.py  wsgi.py
